More functionality on reader.