@@ -9,15 +9,19 @@ An ASiC file is simply a ZIP archive created according to some rules set forth i
 The benefits of using containers for message transfer are:
 * all files are kept together as a single collection.
 * very efficient with regards to space.
-* due to the compressed format, communication bandwith is utilized better
+* due to the compressed format, communication bandwidth is utilized better
 * message integrity is provided, using message digests and signatures.
-* confidentiality is provied by encryption using AES-256 in GCM mode
+* confidentiality is provided by encryption using AES-256 in GCM mode
 
 This component provides an easy-to-use factory for creating ASiC-E containers.
 
 Conformance is claimed according to 7.2.1 (TBA) and 7.2.2 in
 [ETSI TS 102 918 V1.3.1](http://webapp.etsi.org/workprogram/Report_WorkItem.asp?WKI_ID=42455).
 
+## Documentation
+
+* [Conformance](doc/conformance.md)
+* [Creating an ASiC-E container manually using OpenSSL](doc/openssl.md)
 
 ## Maven
 
@@ -99,75 +103,3 @@ asicReader.close();
 
 This library validate signatures, but does not validate the certificate. It's up to the implementer using the library
 to choose if and how to validate certificates. Certificate(s) used for validation is exposed by the library.
-
-
-## Creating an ASiC-E container manually
-
-This is how you create an ASiC container manually:
-
-1. Create empty directory named `asic-sample`
-1. Copy the files `bii-envelope.xml`and `bii-trns081.xml` into `asic-sample`
-1. Create the directory `META-INF`:
-1. Compute the SHA-256 digest value for the files and save them:
-```
-openssl dgst -sha256 -binary bii-envelope |base64
-openssl dgst -sha256 -binary bii-message |base64
-
-```
-1. Create the file `META-INF/asicmanifest.xml`, add an entry for each file and
-paste the SHA-256 values computed in the previous step. The file should look something like this:
-```xml
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<ASiCManifest xmlns="http://uri.etsi.org/02918/v1.2.1#" xmlns:ns2="http://www.w3.org/2000/09/xmldsig#">
-    <SigReference URI="META-INF/signature.p7s" MimeType="application/x-pkcs7-signature"/>
-    <DataObjectReference URI="bii-trns081.xml" MimeType="application/xml">
-        <ns2:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
-        <ns2:DigestValue>morANIlh3TGxMUsJWKfICly7YXoduG7LCohAKc2Sip8=</ns2:DigestValue>
-    </DataObjectReference>
-    <DataObjectReference URI="bii-envelope.xml" MimeType="application/xml">
-        <ns2:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
-        <ns2:DigestValue>IZ9yiwKHsTWMcyFebi7csqOOIHohy2gPd02VSfbyUCI=</ns2:DigestValue>
-    </DataObjectReference>
-</ASiCManifest>
-```
-1. Create the signature, which should be placed into `signature.p7s`. The file `comodo.pem` should
-be replaced with the PEM-file holding your private key for the signature, and the certificate to prove it.
-```
-openssl cms -sign -in META-INF/asicmanifest.xml -binary -outform der -out META-INF/signature.p7s -signer comodo.pem
-```
-
-1. Verify the signature:
-```
-openssl cms -verify -in META-INF/signature.p7s -inform der -content META-INF/asicmanifest.xml -noverify
-```
-Note! The `-noverify` option omits verifying the certificate chain of trust and should only be used to verify that the files were created properly
-
-1. Create the ZIP-archive using your favourite tool :-)
-
-**Disclaimer:** The procedure liste above works on a Mac or Linux machine with the various tools pre-installed. If you are running on a windows machine
-you need to download and install the *openssl* and *base64* tool and adapt the procedure according to your liking.
-
-
-## Verifying the contents using *openssl*
-
-Here is how to verify the signature using the *openssl(1)* command line tool:
-
-```
-openssl cms -verify -in META-INF/signature.p7s -inform der -content META-INF/asicmanifest.xml -noverify
-```
-
-The `-noverify` option will allow self signed certificates, and should normally be omitted :-).
-
-
-## Programmers notes
-
-You might encounter memory problems when using Java 1.7. This is due to the memory consumption of JAXB.
-
-Try this before you run maven, you might need to increase this even further (your mileage may vary):
-```
-export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
-```
-or on Windows:
-```
-set MAVEN_OPTS=-Xmx1024m -XX:MaxPermSize=512m
-```
